Revision history for experimental

{{$NEXT}}

0.027     2022-02-08 18:41:07+01:00 Europe/Amsterdam
          - Update documented list of experiments

0.026     2022-02-08 14:41:02+01:00 Europe/Amsterdam
          - Added defer experiment
          - Added for_list experiment
          - Added builtin experiment
          - args_array_with_signatures

0.025     2021-07-30 14:41:39+02:00 Europe/Amsterdam
          - Add missing documentation for try

0.024     2021-05-01 19:44:14+02:00 Europe/Amsterdam
          - Rereleased without NYTProf files

0.023     2021-04-30 19:35:09+02:00 Europe/Amsterdam
          - Added try feature

0.022     2020-05-04 22:34:48+02:00 Europe/Amsterdam
          - Skip tests when needed, to allow installation on <5.10

0.021     2020-02-22 23:18:22+01:00 Europe/Amsterdam
          - Add the isa feature

0.020     2018-05-09 21:31:22+02:00 Europe/Amsterdam
          - Add the declared_refs feature

0.019     2017-12-03 18:40:19+01:00 Europe/Amsterdam
          - Rerelease without NYTProf files

0.018     2017-11-29 12:39:58+01:00 Europe/Amsterdam
          - Make test pass when warnings are enabled
          - Make experimental installable on 5.8

0.017     2017-11-14 16:23:53+01:00 Europe/Amsterdam
          Remove auto_deref for 5.24+

0.016     2015-10-10 12:46:48+02:00 Europe/Amsterdam
          Fix deprecation check

0.015     2015-10-03 14:21:18+02:00 Europe/Amsterdam
          Make lexical_topic a deprecated feature

0.014     2015-09-12 00:29:37+02:00 Europe/Amsterdam
          Add bitwise to list of known features

0.013     2014-10-25 21:54:47+02:00 Europe/Amsterdam
          Rename lvalue_refs to refaliasing

0.012     2014-10-12 12:10:06+02:00 Europe/Amsterdam
          Added lvalue references feature

0.011     2014-09-27 14:08:47+02:00 Europe/Amsterdam
          Clarified which order to apply pragmas [Grant McLean]

0.010     2014-08-19 17:47:20+02:00 Europe/Amsterdam
          Add returning 1's to evals in tests
