@@ -1,6 +1,7 @@
 Revision history for experimental
 
 {{$NEXT}}
+          - Add extra_paired_delims feature
 
 0.027     2022-02-08 18:41:07+01:00 Europe/Amsterdam
           - Update documented list of experiments
